--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -1,5 +1,7 @@
-<div class="center">
-  <img src="/assets/logo_p6.png" alt="logo" />
-  <h1>Welcome to MDD</h1>
-  <button mat-raised-button color="primary" (click)="start()">Commencer</button>
+<div class="container">
+  <img src="/assets/logo_p6.png" alt="Your Image" class="image">
+  <div class="button-container">
+    <button mat-stroked-button (click)="navigateTo('/login')">Se connecter</button>
+    <button mat-stroked-button (click)="navigateTo('/signup')">S'inscrire</button>
+  </div>
 </div>
