--- a/front/src/app/components/posts/post-card/post-card.component.html
+++ b/front/src/app/components/posts/post-card/post-card.component.html
@@ -1,1 +1,13 @@
-<p>post-card works!</p>
+<article class="post-card" [attr.id]="'post-' + id">
+  <header class="post-card__header">
+    <h2 class="post-card__title">{{ title }}</h2>
+    <div class="post-card__meta">
+      <span class="post-card__author" aria-label="Auteur">{{ author }}</span>
+      <time class="post-card__date" [attr.datetime]="date">{{ date }}</time>
+    </div>
+  </header>
+  <div class="post-card__content">
+    <p class="post-card__description">{{ description }}</p>
+  </div>
+</article>
+  
