--- a/front/src/app/components/auth/login/login.component.html
+++ b/front/src/app/components/auth/login/login.component.html
@@ -1,1 +1,35 @@
-<p>login works!</p>
+<app-header [isAuthPage]="true" [showBacklink]="true"></app-header>
+
+<div class="login">
+  <div class="login__container">
+    <h1 class="login__title">Se connecter</h1>
+
+    <form [formGroup]="loginForm" (ngSubmit)="submit()" class="login__form">
+      <div class="login__field">
+        <label for="email" class="login__label">Email</label>
+        <input
+          type="email"
+          id="email"
+          formControlName="email"
+          class="login__input"
+          placeholder="antoine.chemin@free.fr">
+      </div>
+
+      <div class="login__field">
+        <label for="password" class="login__label">Mot de passe</label>
+        <input
+          type="password"
+          id="password"
+          formControlName="password"
+          class="login__input"
+          placeholder="••••••••">
+      </div>
+
+      <button type="submit"
+              class="login__submit"
+              [disabled]="loginForm.invalid || isLoading">
+        Se connecter
+      </button>
+    </form>
+  </div>
+</div>
