--- a/front/src/app/components/posts/comments/comment-list/comment-list.component.html
+++ b/front/src/app/components/posts/comments/comment-list/comment-list.component.html
@@ -1,1 +1,21 @@
-<p>comment-list works!</p>
+<div class="comment-list">
+    <p>
+      <span class="comment-list__title">Commentaires</span>
+    </p>
+    @if(this.comments.length == 0) {
+      <span class="comment-list__empty">Aucun commentaire disponible... Écrivez-en un ci-dessous.</span>
+    }
+    @else{
+      <div class="comment-list__container">
+        @for (comment of this.comments; track comment.id) {
+          <div class="comment-list__item">
+            <label class="comment-list__username">{{comment.username}}</label>
+            <div class="comment-list__content">
+              <p>{{comment.text}}</p>
+            </div>
+          </div>
+        }
+      </div>
+    }
+  </div>
+  
