--- a/front/src/app/components/auth/register/register.component.html
+++ b/front/src/app/components/auth/register/register.component.html
@@ -1,6 +1,6 @@
 <app-header [isAuthPage]="true" [showBacklink]="true"></app-header>
-<div class="container">
-  <div>
+<div class="page-container">
+  <div class="register page-container__main">
     <h2>Inscription</h2>
     <form [formGroup]="form" (ngSubmit)="submit()">
       <div class="input-group">
