--- a/front/src/app/components/header/header.component.scss
+++ b/front/src/app/components/header/header.component.scss
@@ -1,8 +1,7 @@
 @import '../../../styles/variables';
 
 .header {
-  background-color: white;
-
+  height: 20vh;
   &__container {
     width: 100%;
     display: flex;
@@ -10,15 +9,13 @@
   }
 
   &__logo-container {
-    padding: 15px 20px;
-    height: 51px;
     display: flex;
     align-items: center;
     width: 100%;
   }
 
   &__nav-container {
-    padding: 15px 20px;
+    padding: 0 20px;
     display: flex;
     align-items: center;
     position: relative;
@@ -58,14 +55,13 @@
         height: 100%;
         width: auto;
         margin: 0;
-        padding: 15px 20px;
-        border-bottom: 1px solid #000;
+        padding: 0 20px;
       }
 
       .header__backlink {
         position: static;
         transform: none;
-        padding: 15px 20px;
+        padding: 0 20px;
       }
     }
   }
@@ -109,11 +105,8 @@
 }
 
 .header {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 1rem 0;
-
   &__image {
+    display: block;
     width: 100%;
     height: auto;
   }
