--- a/front/src/app/pages/user/user.component.html
+++ b/front/src/app/pages/user/user.component.html
@@ -1,1 +1,74 @@
-<p>user works!</p>
+<div class="user">
+  <h2 class="user__title">Profil utilisateur</h2>
+  
+  <form [formGroup]="form" (ngSubmit)="updateUserProfile()" class="user__form">
+    <div class="user__form-fields">
+      <div class="user__form-group">
+        <input formControlName="name" placeholder="Nouveau nom d'utilisateur">
+        <p *ngIf="nameValidationMessage" class="user__error">
+          {{ nameValidationMessage }}
+        </p>
+      </div>
+
+      <div class="user__form-group">
+        <input formControlName="email" placeholder="Nouvelle adresse email">
+        <p *ngIf="emailValidationMessage" class="user__error">
+          {{ emailValidationMessage }}
+        </p>
+      </div>
+
+      <div class="user__form-submit">
+        <p *ngIf="onError" class="user__error">Une erreur est survenue</p>
+        <button 
+          mat-flat-button 
+          color="primary" 
+          type="submit" 
+          [disabled]="isUpdateButtonDisabled()"
+          class="user__button">
+          Mettre à jour le profil
+        </button>
+      </div>
+    </div>
+  </form>
+
+  <div class="user__logout">
+    <a (click)="logout()">Se déconnecter</a>
+  </div>
+
+  <hr class="user__divider">
+
+  <h2 class="user__subtitle">Abonnements</h2>
+
+  @if (isLoading) {
+    <div class="user__loading">
+      <p>Chargement des abonnements...</p>
+      <app-loader></app-loader>
+    </div>
+  }
+
+  @if (onErrorFetchingSubscriptions) {
+    <p class="user__error">
+      Une erreur est survenue lors de la récupération des abonnements...
+    </p>
+  } @else if (!hasSubscriptions) {
+    <p class="user__empty">
+      Aucun abonnement...
+    </p>
+  } @else {
+    <div class="user__grid">
+      @for (topic of userSubscribedTopicsArray; track topic.id) {
+        <div class="user__item">
+          <app-topic-card 
+            [id]="topic.id"
+            [title]="topic.title"
+            [description]="topic.description"
+            [isSubscribed]="topic.isSubscribed"
+            [isSubscribeCase]="false"
+            (onSubscribe)="unsubscribeFromTopic($event)">
+          </app-topic-card>
+        </div>
+      }
+    </div>
+  }
+</div>
+  
