--- a/front/src/styles/_variables.scss
+++ b/front/src/styles/_variables.scss
@@ -34,7 +34,7 @@ $spacing-lg: 1.5rem;
 $spacing-xl: 2rem;
 
 // Typographie
-$font-family: 'Roboto', sans-serif;
+$font-family: 'Inter', sans-serif;
 $font-size-base: 16px;
 $font-weight-regular: 400;
 $font-weight-medium: 500;
