--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -5,11 +5,15 @@
       text="Se connecter"
       type="none"
       routerLink="/login"
-    ></app-btn>
+      verticalPosition="center"
+      horizontalPosition="center">
+    </app-btn>
     <app-btn
       text="S'inscrire"
       type="none"
       routerLink="/signup"
-    ></app-btn>
+      verticalPosition="center"
+      horizontalPosition="center">
+    </app-btn>
   </div>
 </div>
