refacto & mise en page

--- a/front/src/app/pages/posts/post-create/post-create.component.html
+++ b/front/src/app/pages/posts/post-create/post-create.component.html
@@ -1,5 +1,6 @@
-<a [routerLink]="['../']" class="post-create__back-link">←</a>
-<div class="post-create">
+
+<div class="page-container">
+<div class="post-create page-container__main">
   <h2>Créer un article</h2>
   <form [formGroup]="postForm" (ngSubmit)="onSubmit()" class="post-create__form">
     <div class="post-create__field">
