--- a/front/src/app/pages/user/user.component.html
+++ b/front/src/app/pages/user/user.component.html
@@ -1,4 +1,5 @@
-<div class="user">
+<div class="page-container">
+  <div class="user page-container__main">
   <h2 class="user__title">Profil utilisateur</h2>
   
   <form [formGroup]="form" (ngSubmit)="onSubmit()" class="user__form">
@@ -70,5 +71,6 @@
       }
     </div>
   }
+  </div>
 </div>
   
