--- a/front/src/app/components/posts/post-card/post-card.component.html
+++ b/front/src/app/components/posts/post-card/post-card.component.html
@@ -2,8 +2,8 @@
   <header class="post-card__header">
     <h2 class="post-card__title">{{ title }}</h2>
     <div class="post-card__meta">
+      <time class="post-card__date" [attr.datetime]="date">{{ formattedDate }}</time>
       <span class="post-card__author" aria-label="Auteur">{{ author }}</span>
-      <time class="post-card__date" [attr.datetime]="date">{{ date }}</time>
     </div>
   </header>
   <div class="post-card__content">
