--- a/front/src/app/components/posts/post-card/post-card.component.scss
+++ b/front/src/app/components/posts/post-card/post-card.component.scss
@@ -1,12 +1,12 @@
 // Variables
-$card-padding: 1rem;
+$card-padding: 2rem;
 $card-border-radius: 8px;
 $card-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 $card-hover-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
 $card-transition: all 0.3s ease;
 
 // Couleurs
-$card-bg: #ffffff;
+$card-bg: #F5F5F5;
 $card-text: #333333;
 $card-meta: #666666;
 $card-border: #e0e0e0;
@@ -18,6 +18,7 @@ $card-border: #e0e0e0;
   padding: $card-padding;
   transition: $card-transition;
   border: 1px solid $card-border;
+  min-height: 300px;
 
   &:hover {
     box-shadow: $card-hover-shadow;
@@ -39,13 +40,15 @@ $card-border: #e0e0e0;
   &__meta {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: left;
     color: $card-meta;
     font-size: 0.875rem;
   }
 
   &__author {
     font-weight: 500;
+    align-self: left;
+    width: 50%;
   }
 
   &__date {
@@ -61,6 +64,7 @@ $card-border: #e0e0e0;
     margin: 0;
     display: -webkit-box;
     -webkit-line-clamp: 3;
+    line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
   }
@@ -111,7 +115,11 @@ $card-border: #e0e0e0;
     .post-box-container {
       width: 320px;
     }
-  
+
+    .post-card {
+      min-height: 100px;
+    }
+      
     .scrollable-paragraph {
       height: 100px;
     }
