--- a/front/src/app/pages/posts/post-detail/post-detail.component.html
+++ b/front/src/app/pages/posts/post-detail/post-detail.component.html
@@ -6,11 +6,11 @@
     }
     @else {
       <div class="post-detail__content">
-        <h3 class="post-detail__title">{{postData?.title}}</h3>
+        <h1 class="post-detail__title">{{postData?.title}}</h1>
         <div class="post-detail__info">
-          <span>{{formattedDate}}</span>
-          <span>Auteur : {{postData?.author}}</span>
-          <span>Thème : {{postData?.topicName}}</span>
+          <h2>{{formattedDate}}</h2>
+          <h2>Auteur : {{postData?.author}}</h2>
+          <h2>Thème : {{postData?.topicName}}</h2>
         </div>
         <div class="post-detail__description">
           <p>{{postData?.description}}</p>
