--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,4 +1,2 @@
-@if(showNavbar){
-    <app-navbar></app-navbar>
-  }
+<app-header *ngIf="navigationService.getShowHeader() | async"></app-header>
 <router-outlet></router-outlet>
