--- a/front/src/app/components/auth/login/login.component.html
+++ b/front/src/app/components/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<app-header [isAuthPage]="true" [showBacklink]="true"></app-header>
+<app-header [isAuthPage]="true"></app-header>
 <div class="page-container">
   <div class="login page-container__main">
     <div class="login__container">
