--- a/front/src/app/components/auth/register/register.component.html
+++ b/front/src/app/components/auth/register/register.component.html
@@ -1,4 +1,4 @@
-<app-header [isAuthPage]="true" [showBacklink]="true"></app-header>
+<app-header [isAuthPage]="true"></app-header>
 <div class="page-container">
   <div class="register page-container__main">
     <h2>Inscription</h2>
