--- a/front/src/app/components/posts/post-card/post-card.component.scss
+++ b/front/src/app/components/posts/post-card/post-card.component.scss
@@ -67,6 +67,8 @@ $card-border: #e0e0e0;
     line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
   }
 }
 
