modif structure projet par pages > composants de la page

--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -11,7 +11,7 @@
     <app-btn
       text="S'inscrire"
       type="none"
-      routerLink="/signup"
+      routerLink="/register"
       verticalPosition="center"
       horizontalPosition="center">
     </app-btn>
