--- a/front/src/app/components/header/logo/logo.component.scss
+++ b/front/src/app/components/header/logo/logo.component.scss
@@ -16,7 +16,7 @@
 @media screen and (max-width: $tablet) {
   .logo {
     width: 100%;
-    justify-content: center;
+    justify-content: left;
     padding: 0 20px;
     margin: 0;
     
