--- a/front/src/app/pages/posts/post-detail/post-detail.component.scss
+++ b/front/src/app/pages/posts/post-detail/post-detail.component.scss
@@ -56,16 +56,11 @@
 
 @media screen and (max-width: 768px) {
   .post-detail {
-    padding: 1rem;
+    padding: 0;
 
     &__back-link {
       left: 1rem;
       top: 1rem;
-    }
-
-    &__content,
-    &__comments {
-      padding: 1.5rem;
     }
 
     &__title {
