--- a/front/src/styles/_material-overrides.scss
+++ b/front/src/styles/_material-overrides.scss
@@ -14,10 +14,15 @@
     margin-bottom: $spacing-md !important;
   }
 
-  h3, .mat-h3, .mat-headline-3 {
-    font-size: $font-size-h3 !important;
-    font-weight: $font-weight-semibold !important;
-    margin-bottom: $spacing-sm !important;
+  h3,
+  .mat-h3,
+  .mat-subtitle-1 {
+    font-family: $font-family;
+    font-size: $font-size-h3;
+    font-weight: $font-weight-semibold;
+    line-height: $line-height-normal;
+    letter-spacing: normal;
+    margin: 0;
   }
 }
 
