--- a/front/src/styles/_variables.scss
+++ b/front/src/styles/_variables.scss
@@ -48,6 +48,7 @@ $font-weight-regular: 400;
 $font-weight-medium: 500;
 $font-weight-semibold: 600;
 $font-weight-bold: 700;
+$line-height-normal: 1.5;
 
 // Border radius
 $border-radius-sm: 4px;
